--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,5 +50,5 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics:17.5.0'
 
     implementation 'com.squareup.picasso:picasso:2.5.2'
-
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
 }
